 * Added $g_debug_email which allows debugging e-mail messages during development by only sending them to the specified e-mail while including the original to, cc, bcc in the message body (currently supported only when phpmailer is used).

2002.08.23  -  0.17.5
 * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
 * Corrected bug_close.php and bug_close_page.php, which ignored the $g_close_bug_threshold setting.
 * Corrected bug_reopen.php and bug_reopen_page.php, which ignored the $g_reopen_bug_threshold setting.
 * Fixed problems in bug_update_advanced_page.php, bug_update_page.php, view_bug_advanced_page.php and view_bug_page.php which allowed users to view private bugs. It does that icky logout thing again, which will be replaced with a nice message in 0.18.0.
 * Fixed a problem in view_all_bug_page.php which allowed users to see public bugs in private projects when all projects were marked private.

2002.08.19  -  0.17.4a
 * Fixed the fix of the ambigious column problem
 * Fixed the 'second line of defense' against the arbitrary-code-execution vulnerability

2002.08.18  -  0.17.4
 * This is a maintenance release. It patches up several vulnerabilities in 0.17.3. No features have been added.
 * Fixed a problem in config_inc2.php, which would allow a malicious user to execute arbitrary code and view any local file available to the webserver-user.
 * Fixed a problem in summary_graph_functions.php, which just allowed a malicious user to execute arbitrary code.
 * Fixed a problem in print_all_bug_page.php, which allowed reporters to see bugs they hadn't reported, even when $g_limit_reporters is set to ON.
 * Fixed a problem in view_all_bug_page.php, which allowed any user to see the summaries of public bugs in private projects, by manipulation of the project cookie.
 * Modified admin_check.php to prevent use by spammers.