@@ -138,6 +138,7 @@ Mantis ChangeLog
  * Added a custom_headers config variable that included a list of headers to preprend to each outgoing HTTP response.  This can be used for P3P policy headers among other things (see issue #2649)
  * Added a allow_reporter_reopen config variable that allows reporters to reopen closed bugs that they reported if they are unhappy with the resolution (defaults to ON) (see issue #2108)
  * Added $g_debug_email which allows debugging e-mail messages during development by only sending them to the specified e-mail while including the original to, cc, bcc in the message body (currently supported only when phpmailer is used).
+ * Added show_project_menu_bar config option to add a menu bar with all the projects as links
 
 2002.08.23  -  0.17.5
  * Corrected bug_delete.php and bug_delete_page.php, which ignored the $g_allow_bug_delete_access_level setting.
